# Numerical_methods

LAB3/: CMakeLists.txt  main.cpp  main.py  plot_splines.py
LAB3/cm3_python/: main.py
LAB3/headers/: Point.h  Smoothing_Spline_1D.h  Spline.h
LAB3/sources/: Point.cpp  Smoothing_Spline_1D.cpp
LAB5/: .gitignore  integral_calculators.cpp  ПЗ_5_Долгополов_ПМИ-31.docx
LAB6/: Makefile  main.cpp
LAB6/headers/: complex_operations.h  data_exporters.h  signal_filters.h  signal_generator.h  transform_analyzers.h  utilities.h
LAB6/src/: complex_operations.cpp  data_exporters.cpp  signal_filters.cpp  signal_generator.cpp  transform_analyzers.cpp  utilities.cpp
LAB7/: wavelet_analysis
LAB7/include/: math_constants.h  signal_operations.h  signal_transformer.h  wavelet_processor.h
LAB7/src/: main.cpp  signal_operations.cpp  signal_transformer.cpp  wavelet_processor.cpp
LAB8/: Makefile
LAB8/include/: numerical_schemes.h  predator_prey_model.h
LAB8/src/: main.cpp  numerical_schemes.cpp  predator_prey_model.cpp
Lab5/: integral_calculators.h  main.cpp
